# data-engineering-on-gcp

01-introduction-to-data-engineering/: data.json  dogs.json  extract.py  load.sh
03-setting-up-data-lake-using-google-cloud-storage/: main.py  mypim-410508-aa641afffee1.json  pyproject.toml
04-building-data-pipelines-with-apache-airflow-cloud-composer/mnt/dags/: avg_weekly_baskets_model_training.py  breakfast_product_pipeline.py  breakfast_stores_pipeline.py  breakfast_transactions_pipeline.py  dog_dag.py  dogs.json  ga_transaction_model_traning.py  ga_transaction_model_traning_ds.py  my_first_dag.py  my_second_dag.py  template_xcom_transactions_pipeline.py
my-project/: pyproject.toml
my-streamlit-app/: main.py  pyproject.toml
netflix/: import.py  main.py  pyproject.toml
netflix/airflow/mnt/dags/: load_netflix_sql_to_bigqurey.py  netflix-prediction.py
proj-sales-prediction/: ben.txt  main.py  mypim-410508-6add4b27aede.json  mypim-410508-gcs-bigquery-admin.json  pipeline.conf  pyproject.toml  upload_products_gcs_then_bigquery.py  upload_products_to_bigquery.py  upload_stores_to_bigquery.py  upload_transactions_to_bigquery.py
titanic/: import.py  local.conf  main.py  pyproject.toml
titanic/airflow/mnt/dags/: load_titanic_sql_to_bigqurey.py  titanic-bigquery.json  titanic-load-to-gcs.json  titanic-survivor-prediction.py  titanic_survivor_predictor_double_model.py
